# WMTest

./: .gitignore  CMakeLists.txt  Test_SerialPort.cpp  autostart.sh  main.cpp  main666.txt  readme.md  restart.sh
armor/include/: AimAuto.hpp  KalmanFilter.hpp  armor.hpp  detector.hpp  tracker.hpp
armor/src/: AimAuto.cpp  detector.cpp  number_classifier.cpp  tracker.cpp
camera/include/: camera.hpp
camera/src/: camera.cpp
config/: AimautoConfig.yaml  CameraConfig.yaml  DetectionConfig.yaml  Path.yaml  WindmillConfig.yaml
model/: 2025_01_03_mini200.xml  best.xml
params/include/: UIManager.hpp  globalParam.hpp  globalText.hpp
params/src/: UIManager.cpp  globalParam.cpp
serialPort/include/: MessageManager.hpp
serialPort/src/: MessageManager.cpp
windmill/include/: WMIdentify.hpp  WMPredict.hpp  traditional_detection.hpp
windmill/src/: WMIdentify.cpp  WMPredict.cpp  traditional_detection.cpp
